--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <packaging>pom</packaging>
 
     <modules>
-
+        <module>msvc-paciente</module>
     </modules>
 
     <properties>
@@ -26,5 +26,20 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <!-- TODO: Dependencias para la BD en memoria -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!--        -->
+    </dependencies>
 
 </project>
