validations complete in create patient

--- a/msvc-paciente/src/main/resources/application.yml
+++ b/msvc-paciente/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   application:
     name: msvc-paciente
+  messages:
+    basename: message-error
+    encoding: UTF-8
 
   r2dbc:
     url: r2dbc:h2:mem:///patientdb;MODE=PostgreSQL
